@@ -11,6 +11,9 @@ Changes with Apache 2.2.31
   *) core: Do not over allocate memory within 'ap_rgetline_core' for
      the common case. [Christophe Jaillet]
 
+  *) Core: reject NULLs in request line or request headers.
+     PR 43039 [Nick Kew]
+
 Changes with Apache 2.2.30 (not released)
 
   *) SECURITY: CVE-2015-3183 (cve.mitre.org)
